--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
   <body>
    <nav class="navbar fixed-top navbar-expand-lg navbar-dark page-navbar gradient">
       <div class="container">
-        <a class="navbar-brand logo" href="#">My CV</a>
+        <a class="navbar-brand logo" href="#">My Portfolio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item item">
-                <li class="nav-item item">
+                <!--<li class="nav-item item">
                   <a class="nav-link" href="#work-experience">Work Experience</a>
-                </li>
+                </li>-->
                 <li class="nav-item item">
                     <a class="nav-link" href="#education">Education</a>
                 </li>
@@ -43,7 +43,7 @@
             <img class="img-fluid" style="border-radius: 10%;" src="assets/img/32.jpg">
           </div>
           
-          <p>Hello! I am <strong>Chary Blance Puno</strong>. I am a 4th-year IT student majoring in Networking at Mindanao State University-GenSan.</p>
+          <p>Hello! I am <strong>Chary Blance Puno</strong>. I am a 4th-year IT student major in Networking at Mindanao State University-GenSan.</p>
           <a href="mailto:sariblans@gmail.com" class="btn btn-outline-primary">Hire Me</a>
         </div>
       </section>
@@ -193,7 +193,7 @@
           </div>
           <div class="hobbies group" id="hobbies">
             <h2 class="text-center">Hobbies</h2>
-            <p class="text-center text-muted">I’m passionate about experimenting with web design and creating visually compelling user interfaces, which fuels my creativity and keeps my skills sharp. Additionally, I enjoy playing strategy online games, which challenge my problem-solving abilities and provide a fun way to unwind.</p>
+            <p class="text-center text-muted">I enjoy playing strategy online games, which challenge my problem-solving abilities and provide a fun way to unwind.</p>
           </div>
         </div>
       </section>
@@ -202,7 +202,7 @@
           <div class="social-icons">
             <a href="https://www.facebook.com/chary.blance.12"><i class="ion-social-facebook" title="Facebook"></i></a>
             <a href="https://www.instagram.com/_tsariblans/"><i class="ion-social-instagram-outline" title="Instagram"></i></a>
-            <a href="#"><i class="ion-social-twitter" title="Twitter"></i></a>
+            <a href=""><i class="ion-social-twitter" title="Twitter"></i></a>
           </div>
         </div>
       </footer>
