--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <section class="cv-block block-intro border-bottom">
         <div class="container">
           <div class="avatar">
-            <img class="img-fluid" style="border-radius: 10%;" src="assets/img/32.jpg">
+            <img class="img-fluid" rounded-circle" src="assets/img/.jpg">
           </div>
           
           <p>Hello! I am <strong>Chary Blance Puno</strong>. I am a 4th-year IT student major in Networking at Mindanao State University-GenSan.</p>
@@ -99,9 +99,9 @@
                 <div class="col-md-6">
                   <time class="period">2015 - 2019</time>
                 </div>
-              </div>
-              <p class="text-muted">I enrolled in TLE major in Computer Hardware Servicing (CHS) and Information Communication Technology (ICT)</p>
-            </div>
+              <!--</div>
+              <p class="text-muted"></p>
+            </div>-->
             <div class="item">
               <div class="row">
                 <div class="col-md-6">
@@ -193,7 +193,7 @@
           </div>
           <div class="hobbies group" id="hobbies">
             <h2 class="text-center">Hobbies</h2>
-            <p class="text-center text-muted">I enjoy playing strategy online games, which challenge my problem-solving abilities and provide a fun way to unwind.</p>
+            <p class="text-center text-muted">I enjoy playing online games, which challenge my problem-solving abilities and provide a fun way to unwind.</p>
           </div>
         </div>
       </section>
