--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <section class="cv-block block-intro border-bottom">
         <div class="container">
           <div class="avatar">
-            <img class="img-fluid" rounded-circle" src="assets/image/4.jpg">
+            <img class="img-fluid" rounded-circle src="assets/image/4.jpg">
           </div>
           
           <p>Hello! I am <strong>Chary Blance Puno</strong>. I am a 4th-year IT student major in Networking at Mindanao State University-GenSan.</p>
