--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <section class="cv-block block-intro border-bottom">
         <div class="container">
           <div class="avatar">
-            <img class="img-fluid" rounded-circle src="assets/image/4.jpg">
+            <img class="img-fluid rounded-circle" src="assets/image/4.jpg">
           </div>
           
           <p>Hello! I am <strong>Chary Blance Puno</strong>. I am a 4th-year IT student major in Networking at Mindanao State University-GenSan.</p>
@@ -99,9 +99,9 @@
                 <div class="col-md-6">
                   <time class="period">2015 - 2019</time>
                 </div>
-              <!--</div>
+              </div>
               <p class="text-muted"></p>
-            </div>-->
+            </div>
             <div class="item">
               <div class="row">
                 <div class="col-md-6">
