--- a/index.html
+++ b/index.html
@@ -135,19 +135,19 @@
                   <h3>HTML</h3>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" aria-valuenow="70"
-                    aria-valuemin="0" aria-valuemax="100" style="width:100%">
+                    aria-valuemin="0" aria-valuemax="100" style="width:70%">
                     </div>
                   </div>
                   <h3>PHP</h3>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" aria-valuenow="70"
-                    aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                    aria-valuemin="0" aria-valuemax="100" style="width:50%">
                     </div>
                   </div>
-                  <h3>JavaScript</h3>
+                  <h3>Python</h3>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" aria-valuenow="70"
-                    aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                    aria-valuemin="0" aria-valuemax="100" style="width:60%">
                     </div>
                   </div>
                 </div>
@@ -202,7 +202,7 @@
           <div class="social-icons">
             <a href="https://www.facebook.com/chary.blance.12"><i class="ion-social-facebook" title="Facebook"></i></a>
             <a href="https://www.instagram.com/_tsariblans/"><i class="ion-social-instagram-outline" title="Instagram"></i></a>
-            <a href=""><i class="ion-social-twitter" title="Twitter"></i></a>
+            <a href="https://www.x.com/CharyBlance"><i class="ion-social-twitter" title="Twitter"></i></a>
           </div>
         </div>
       </footer>
